// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GIVEN Detail Component WHEN page is rendered THEN should match to snapshot 1`] = `
<DocumentFragment>
  <section
    class="container"
  >
    <div
      class="breadcrumbsContainer"
    >
      <nav
        class="breadcrumbs"
      >
        <nav
          class="breadcrumbs"
        />
      </nav>
    </div>
    <div
      class="contentContainer"
    >
      <main
        class="content"
        id="detail"
      >
        <div
          class="container"
        >
          <div
            class="content"
          >
            <img
              class="thumbnail"
            />
            <h4
              class="descriptionTitle"
            >
              Descripción del producto
            </h4>
            <p
              class="description"
            />
          </div>
          <div
            class="heading"
          >
            <p
              class="condition"
            >
              Usado -  vendidos
            </p>
            <h4
              class="title"
            />
            <h3
              class="price"
            />
            <button
              class="cta"
            >
              Comprar
            </button>
          </div>
        </div>
      </main>
    </div>
  </section>
</DocumentFragment>
`;

exports[`GIVEN Detail Component WHEN page is rendered THEN should render the empty state 1`] = `
<DocumentFragment>
  <section
    class="container"
  >
    <div
      class="breadcrumbsContainer"
    >
      <nav
        class="breadcrumbs"
      >
        <nav
          class="breadcrumbs"
        />
      </nav>
    </div>
  </section>
</DocumentFragment>
`;

exports[`GIVEN Detail Component WHEN page is rendered THEN should render the error 1`] = `
<DocumentFragment>
  <section
    class="container"
  >
    <div
      class="breadcrumbsContainer"
    >
      <nav
        class="breadcrumbs"
      />
    </div>
    <pre>
      Error 420 - Oops. Snoop error
    </pre>
    <div
      class="contentContainer"
    >
      <main
        class="content"
        id="detail"
      >
        <div
          class="container"
        >
          <div
            class="content"
          >
            <img
              class="thumbnail"
            />
            <h4
              class="descriptionTitle"
            >
              Descripción del producto
            </h4>
            <p
              class="description"
            />
          </div>
          <div
            class="heading"
          >
            <p
              class="condition"
            >
              Usado -  vendidos
            </p>
            <h4
              class="title"
            />
            <h3
              class="price"
            />
            <button
              class="cta"
            >
              Comprar
            </button>
          </div>
        </div>
      </main>
    </div>
  </section>
</DocumentFragment>
`;

exports[`GIVEN Detail Component WHEN page is rendered THEN should render the loader 1`] = `
<DocumentFragment>
  <section
    class="container"
  >
    <div
      class="breadcrumbsContainer"
    >
      <nav
        class="breadcrumbs"
      />
    </div>
    <span
      class="css-m2td1u"
    >
      <span
        class="css-132xq7w"
      />
      <span
        class="css-16x3gmc"
      />
    </span>
    <div
      class="contentContainer"
    >
      <main
        class="content"
        id="detail"
      >
        <div
          class="container"
        >
          <div
            class="content"
          >
            <img
              class="thumbnail"
            />
            <h4
              class="descriptionTitle"
            >
              Descripción del producto
            </h4>
            <p
              class="description"
            />
          </div>
          <div
            class="heading"
          >
            <p
              class="condition"
            >
              Usado -  vendidos
            </p>
            <h4
              class="title"
            />
            <h3
              class="price"
            />
            <button
              class="cta"
            >
              Comprar
            </button>
          </div>
        </div>
      </main>
    </div>
  </section>
</DocumentFragment>
`;
